# Magic-C-Programming

./: .gitignore  01.flexible_array.c  02.include.c  03.private.c  04.sizeof_int.c  05.int_as_ptr.c  CMakeLists.txt  README.md  predefined.h
02.include/: file_methods.h  global_methods.h  idmap_methods.h  inputstream_methods.h  jni_registration.h  jni_registration.i  resource_methods.h  resource_nameid_methods.h  setup_methods.h  style_methods.h  theme_methods.h
03.private/: person.h  person_internal.c
